# riscv-soc

./: .gitignore  .pre-commit-config.yaml  .rules.verible-format  LICENSE  Makefile  README.md  justfile  pyproject.toml  sourceme
.github/workflows/: chipsim.yaml  docs.yaml
cores/: platform.vh  pyproject.toml
cores/common/: log2.sv
cores/cpu/: cpu.d2  justfile  p1p2.gv  p3p4p5.gv
cores/cpu/hdl/: alu.sv  aluctrl.sv  control.sv  control.v  core.v  (+9 more)
docs/: Makefile  conf.py  main.tex  pyproject.toml
docs/sections/: introduction.tex  motivation.tex
docs/src/: index.md  index.rst  introduction.md  log.md  microarchitecture.md  motivation.md  specification.md  testing.md  tools.md  uart.md
docs/toolchain/: main.tex  preamble.tex
fpga/: Makefile  io.pcf
hdl/: core.v  platform.vh  regfile.v
hdl/common/: log2.sv
hdl/core/: memory.v
hdl/pipeline_regs/: q2q3.v
hdl/uart/: baud_gen.v  flag_buf.v  uart_rx.v  uart_rx_des.v  uart_tx.v  uart_tx_ser.v
sim/: Makefile  alu.f  core.f  dummy_mem.hex  instrmem.S  pyproject.toml
sim/tb_legacy/: core_tb.v  demo_tb.v
src/: Makefile  alu.v  alu_tb.v  alucontrol.v  aluctl.v  aluctrl.v  control.v  core.v  core_tb.v  decoder.v  demo_tb.v  instrmem.v  io.pcf  leds.json  leds.v  memory.v  memory_tb.v  regfile.v  registers.v  tb.v
src/pipeline_regs/: EXMEM.v  EX_MEM.v  IDEX.v  ID_EX.v  IFID.v  IF_ID.v  MEMWB.v  MEM_WB.v  q1q2.v  q2q3.v  q3q4.v  q4q5.v  q5q6.v
tests/tb/: alu_tb.v  core_tb.v  demo_tb.v  instrmem_tb.v
tools/: gen_hex_data.py  gtkwave-riscv-decoder-filter.py  gtkwave-test-filter.py  resize_hexfile.py
(+52 files in other folders)
