[project]
name = "riscv-soc"
version = "0.1.0"
description = "A minimal RISC-V SoC containing an RV32I-compliant core, a UART and AHB interconnect."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
  "furo>=2024.8.6",
  "myst-parser>=4.0.0",
  "sphinx-last-updated-by-git>=0.3.8",
  "sphinx>=8.1.3",
  "sphinx-autobuild>=2024.10.3",
  "codespell>=2.3.0",
  "sphinx-copybutton>=0.5.2",
]
